<resources>
    <string name="app_name">Drama Sphere</string>
    <string name="splash_title" translatable="false">DramaSphere.</string>
    <string name="category_hot">Hot</string>
    <string name="category_new">New</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="for_you">For You</string>
    <string name="no_more_data">No more data</string>
    <string name="network_abnormality">Network abnormality, please try again later</string>
    <string name="speed">Speed</string>
    <string name="collect">Collect</string>
    <string name="episodes">Episodes</string>
    <string name="play_failed_please_try_again">Play failed, please try again.</string>
    <string name="resolution">Resolution</string>
    <string name="completed">Completed</string>
    <string name="watching_in_order">Watching the episodes in order is even better!</string>
    <string name="settings">Settings</string>
    <string name="watch_history">Watch History</string>
    <string name="collection">Collection</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="no_data">No data</string>
    <string name="preparing_ads">Preparing ads…</string>
    <string name="notification_checkin_title">Daily Reward Unlocked</string>
    <string name="notification_checkin_desc">Log in now to collect.</string>
    <string name="notification_drama_title">Daily Activity Live</string>
    <string name="notification_drama_desc">Earn more today.</string>
    <string name="notification_reward_title">$48 Waiting to Be Withdrawn</string>
    <string name="notification_reward_desc">You just got a surprise bonus.</string>
    <string name="notification_almost_title">Almost Ready: $48</string>
    <string name="notification_almost_desc">Finish tasks to unlock withdrawal.</string>
    <string name="notification_screen_on_title1">Every Episode Pays</string>
    <string name="notification_screen_on_des1">You’re missing out</string>
    <string name="notification_screen_on_title2">Your Cash-Out Is Near</string>
    <string name="notification_screen_on_des2">Just a few more episodes.</string>
    <string name="notification_screen_on_title3">Money Almost Unlocked</string>
    <string name="notification_screen_on_des3">Don’t stop now — you’re doing great.</string>
    <string name="notification_screen_on_title4">Forbidden Love Revealed</string>
    <string name="notification_screen_on_des4">Watch before the truth comes out.</string>
    <string name="notification_local_23_title1">Watch &amp; Cash Out</string>
    <string name="notification_local_23_desc1">Each episode increases your balance. Start now.</string>
    <string name="notification_local_23_title2">Drama That Really Pays</string>
    <string name="notification_local_23_desc2">Watch now and earn real money.</string>
    <string name="notification_local_23_title3">She Cheated on Her Wedding Day</string>
    <string name="notification_local_23_desc3">What happened next shocked everyone.</string>
    <string name="notification_local_23_title4">$48 Is Almost Yours</string>
    <string name="notification_local_23_desc4">Complete tasks to cash out.</string>
    <string name="notification_local_59_title1">More Episodes, More Earnings</string>
    <string name="notification_local_59_desc1">Cash-out is getting closer.</string>
    <string name="notification_local_59_title2">He Came Back Rich for Revenge</string>
    <string name="notification_local_59_desc2">The whole family was stunned.</string>
    <string name="notification_local_59_title3">She Was Kicked Out… Then Returned a Millionaire</string>
    <string name="notification_local_59_desc3">Watch now.</string>
    <string name="notification_local_59_title4">The Mistress Was Her Best Friend</string>
    <string name="notification_local_59_desc4">The drama just exploded.</string>
    <string name="notification_local_79_title1">Your Money Grows With Every Episode</string>
    <string name="notification_local_79_desc1">Watch one more.</string>
    <string name="notification_local_79_title2">One Slap Changed Everything</string>
    <string name="notification_local_79_desc2">This episode is on fire.</string>
    <string name="notification_local_79_title3">Surprise Reward Unlocked</string>
    <string name="notification_local_79_desc3">An unexpected bonus hit your balance.</string>
    <string name="notification_local_79_title4">Daily Luck Activated</string>
    <string name="notification_local_79_desc4">A reward has been added.</string>
    <string name="bonus_welcome_title">Welcome Bonus</string>
    <string name="bonus_welcome_action">Receive rewards</string>
    <string name="tips_info">Watch dramas and earn huge rewards!</string>
    <string name="v_pri">Double Bonus</string>
    <string name="claim_rewards">Claim Rewards</string>
    <string name="watch_basic_ad"><u>Just the Basics</u></string>
    <string name="start">START</string>
    <string name="task">Task</string>
    <string name="wallet">Wallet</string>
    <string name="withdraw">Withdraw</string>
    <string name="daily_rewards">Daily rewards</string>
    <string name="watch_an_ad">Watch an AD</string>
    <string name="tv_go">Go</string>
    <string name="tv_join">Join the community</string>
    <string name="watch_earn_coins"><![CDATA[Watch & earn coins]]></string>
    <string name="day_grand_prize">7-Day Grand Prize</string>
    <string name="turn_on_push_notifications">Turn on push notifications</string>
    <string name="dram_short_tips_dialog"><![CDATA[Watch &Earn！Catch hot short dramas first！]]></string>
    <string name="allow_get"><![CDATA[Allow & Get]]></string>
    <string name="back_tips_title">Wait! Don’t Leave Yet!</string>
    <string name="back_tips_desc">Stay with us and get %s bonus instantly!</string>
    <string name="back_tips_exit">Leave Anyway</string>
    <string name="back_tips_stay">Stay &amp; Get %s</string>
    <string name="congratulate">Congratulate</string>
    <string name="withdrawal_progress">Withdrawal Progress</string>
    <string name="withdraw_tips">Only %s more to withdraw! Act fast!</string>
    <string name="claim">Claim</string>
    <string name="my_wallet">My wallet</string>
    <string name="fortune_challenge">Wheel of Fortune Challenge</string>
    <string name="get_re">Claim Reward</string>
    <string name="my_balance">My Balance</string>
    <string name="withdrawal_method">Withdrawal method</string>
    <string name="withdrawal_amount">Withdrawal Amount</string>
    <string name="proud_to_cash_out">-Proud to Cash Out-</string>
    <string name="arrived_via">arrived via [%s]</string>
    <string name="cant_with_tips">Insufficient withdrawal amount</string>
    <string name="withdraw_wait_tips">Withdrawal is loading</string>
    <string name="get_tips">Get %s</string>
    <string name="ad_limit_reached">Ad Limit Reached</string>
    <string name="limit_tips_des">You’ve watched all available ads for today. Try again tomorrow.</string>
    <string name="ok">Ok</string>
    <string name="wi_notification_tips">Is Waiting In Your Wallet.</string>
    <string name="splash_open_first">Your favorite time for movies</string>
    <string name="sp_tips">We\'re preparing your content...</string>
    <string name="account_security_restrictions">Account security restrictions</string>
    <string name="tips_mini_str">For security, the minimum withdrawal is %s.</string>
    <string name="making_money">Making Money</string>
    <string name="insufficient_revenue">Insufficient Revenue</string>
    <string name="ins_tips">The current account balance does not meet your withdrawal requirements.</string>
    <string name="keep_ear_mo">Keep Earning More!</string>
    <string name="add_money_info_tips1">%s Stored In Account.</string>
    <string name="add_money_info_tips2">Only %s More To Withdraw! Act Fast!</string>
    <string name="add_money_info_tips3">You Can Cash Out Now!</string>
    <string name="my_account">My Account</string>
    <string name="enter_withdrawal_amount">Enter Withdrawal Amount</string>
    <string name="withdraw_all">Withdraw All</string>
    <string name="for_security_the_min_with">For security, the minimum withdrawal is %s.</string>
    <string name="lock_info_title">Don\'t Leave Your Money Behind!</string>
    <string name="lock_info_subtitle">Secure Your Earnings in One Quick Step</string>
    <string name="lock_info_quick_action">Secure Your Winnings Now!</string>
    <string name="lock_info_only_one_minute">Only 1 Minute</string>
    <string name="lock_info_desc">Your game was a success! To send your %s in earnings, we just need your payout info.</string>
    <string name="lock_info_later_on">Later On</string>
    <string name="lock_info_secure_my_winnings">Secure My Winnings</string>
    <string name="payment_information_title">Payment Information</string>
    <string name="payment_safe_secure">Safe &amp; Secure</string>
    <string name="payment_submit">Submit</string>
    <string name="payment_account_hint_placeholder">Enter your account</string>
    <string name="withdraw_account_label_email_or_mobile">Email / Mobile Number</string>
    <string name="withdraw_account_label_cpf_email_mobile_random">CPF / Email / Mobile Number / Random Key</string>
    <string name="withdraw_account_label_email_or_cpf">Email / CPF</string>
    <string name="withdraw_account_label_gmail_or_mobile">Gmail / Mobile Number</string>
    <string name="withdraw_account_label_cashtag_email_or_mobile">$Cashtag / Email / Mobile Number</string>
    <string name="withdraw_account_label_mobile_number">Mobile Number</string>
    <string name="withdraw_apply_processing">Due To A High Number Of Requests,\nProcessing May Take A Bit Longer.</string>
    <string name="withdraw_apply_skip_now">Skip Now</string>
    <string name="withdraw_apply_success_title">Application Successful</string>
    <string name="withdraw_apply_success_desc">· 7-14 Working Days After Application.\n· A 1% Fee Applies Per Withdrawal.\n· Keep Growing Your Wealth While You Wait.</string>
    <string name="withdraw_apply_watch_more">Watch More</string>
    <string name="valued_players_my_income">My Income</string>
    <string name="valued_players_earned_bonus">Earned Bonus</string>
    <string name="valued_players_pending_bonus">Pending Bonus</string>
    <string name="valued_players_current_withdrawal_progress">Current Withdrawal Progress</string>
    <string name="valued_players_tap_get_cash">Tap &amp; Get Cash</string>
    <string name="valued_players_just_away">Just %s away from PayPal withdrawal!</string>
    <string name="valued_players_just_away_br">Just %s away from PIX withdrawal!</string>
    <string name="valued_players_just_away_id">Just %s away from GoPay withdrawal!</string>
    <string name="withdraw_ready_title">Milestone Achieved!</string>
    <string name="withdraw_ready_message">Your effort has paid off! You\'ve earned %s and are ready to withdraw.</string>
    <string name="withdraw_ready_later">Later On</string>
    <string name="withdraw_ready_claim">Claim My Reward</string>
    <string name="withdraw_info_title_prefix">Please Verify Your </string>
    <string name="withdraw_info_title_highlight">Payout Account!</string>
    <string name="withdraw_info_platform">Payout Platform</string>
    <string name="withdraw_info_instruction">Payout Instructions</string>
    <string name="withdraw_info_creation_time">Creation Time</string>
    <string name="withdraw_info_estimated_time">Pay Account</string>
    <string name="withdraw_info_payment_method">Payment Method</string>
    <string name="withdraw_info_confirm">Confirm</string>
    <string name="withdraw_info_default_platform">App Name</string>
    <string name="withdraw_info_default_instruction">Drama Reward</string>
    <string name="withdraw_info_default_estimated_time">7-14 Work Days</string>
</resources>