<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="24dp"
    android:paddingHorizontal="18dp"
    android:paddingTop="24dp"
    android:paddingBottom="18dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_semibold"
        android:gravity="center"
        android:text="@string/lock_info_title"
        android:textColor="#F4CE12"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/lock_info_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_lock_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="14dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_lock_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <com.sphere.shortvideos.view.BubbleTextView
        android:id="@+id/btn_quick_action"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/lock_info_quick_action"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:bubbleFillColor="#129E24"
        app:layout_constraintBottom_toBottomOf="@id/iv_lock_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_one_minute"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/shape_dark_r20"
        android:backgroundTint="#FF8400"
        android:gravity="center"
        android:text="@string/lock_info_only_one_minute"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_quick_action" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/lock_info_desc"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_one_minute" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_actions"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="26dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_dark_r20"
            android:gravity="center"
            android:text="@string/lock_info_later_on"
            android:textColor="#DDDDDD"
            android:textSize="13sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_secure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:background="@drawable/shape_primary_r20"
            android:gravity="center"
            android:text="@string/lock_info_secure_my_winnings"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>