<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/ic_back_tips_bg"
    android:paddingHorizontal="20dp"
    android:paddingTop="16dp"
    android:paddingBottom="18dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/back_tips_title"
        android:textColor="#F5C91A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon"
        android:layout_width="121dp"
        android:layout_height="115dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_back_tips"
        app:layout_constraintBottom_toTopOf="@id/tv_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/back_tips_desc"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/layout_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_actions"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_dark_r20"
            android:gravity="center"
            android:text="@string/back_tips_exit"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_stay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_primary_r20"
            android:gravity="center"
            android:text="@string/back_tips_stay"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
